Corrections et réalignement avec poblabs
Différences avec référentiel:

ajout et affichage aqi_dominant
Modif url aeris/airquality (closest ne marche pas)
suppression de l'affichage de la valeur de aqi
suppression de -alt sur les moon-icons
ajout des lignes 0°C et 1013 mbar
Modif de records
Modif de reports par foudre et éclairs
Suppression de la partie forecast (remplacé par infoclimat)

--- a/skins/Belchertown/style.css
+++ b/skins/Belchertown/style.css
@@ -1,4 +1,3 @@
- /*  mju version - Nov 2020 */
 /*
  CSS file for Belchertown weather website.
  This website was originally created in WordPress on Genesis WP. 
@@ -904,7 +903,6 @@ p.entry-meta {
     
     .radar-map {
         float: right;
-		width: 500px;
     }
     
     .forecasts .forecast-day {
@@ -1272,7 +1270,7 @@ p.entry-meta {
 
 .weather-obs-top {
 	/* min-height:205px !important; */
-	min-height:242px !important;
+	min-height:234px !important;
 }
 
 .updated-wrapper {
@@ -1519,15 +1517,21 @@ p.entry-meta {
     width:50%;
 }
 
+.obs-wind-divider {
+    height: 1px;
+    width: 105%;
+    background-color: #D7D7D7;   
+}
+
 .windrow {
 	/* margin-top: 25px; */
 	/* box-sizing: border-box; */
 	border-top: 1px solid #D7D7D7;
 	padding-top: 10px;
-	padding-right: 15px;
+	/* padding-right: 15px; */
 	/* margin: 0 -15px 0 -15px; */
-	margin: 0 0 0 0;
-	width: 105%;
+	margin: -1px  0 0 0;
+	/* width: 105%;	*/	
 }
 
 .curwind {
@@ -1744,7 +1748,6 @@ table.celestial td.label {
 .moon-container {
 	font-size:15px;
 	color:#808080;
-	height:80px;
 }
 
 .moon {
@@ -1757,7 +1760,6 @@ table.celestial td.label {
 
 .radar-map {
 	padding:5px 5px 0px 5px !important;
-	height: 394px;
 }
 
 .forecastrow {
@@ -2068,42 +2070,6 @@ input:checked + .slider:before {
 }
 
 /* End Dark Mode Switch */
-
-/*  Nexus 10 1280*800 landscape */
-@media only screen and (width: 1280px) and (height: 800px) and (orientation: landscape) {
-    .updated-wrapper-nexus10 {
-        display: block !important;
-    }
-
-    .site-header {
-        padding-bottom: 7px;
-    }
-
-    .title-area {
-        width: 600px; 
-    }
-
-    .widget-area {
-        width: 600px !important; 
-    }
-
-    .site-title {
-        margin-bottom: 10px !important;
-        width: 600px;
-    }
-
-    .updated {
-        /*display: block;*/
-        padding-left: 15px;
-        vertical-align: bottom;
-    }
-    .wx-stn-info-container {
-        display: none;
-    }
-    .temperature-row {
-        border-top: 1px solid #D7D7D7 !important;
-    }   
-}
 
 @media only screen and (max-width: 800px) {
 	
